# odmlib

./: .buildinfo  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  GOVERNANCE.md  LICENSE.md  MANIFEST.in  README.md  ROADMAP.md  changelog.html  genindex.html  index.html  modules.html  objects.inv  odmlib.arm_1_0.html  odmlib.ct_1_1_1.html  odmlib.dataframe.html  odmlib.dataset_1_0_1.html  odmlib.dataset_json_1_1.html  odmlib.define_2_0.html  odmlib.define_2_1.html  odmlib.odm_1_3_2.html  odmlib.odm_2_0.html  py-modindex.html  pyproject.toml  repro_issue.py  requirements.txt  search.html  searchindex.js  setup.py  smoke_test_phase_1.py  smoke_test_reorder_object_phase_1.py  smoke_test_validate_phase_1.py
_modules/: arm_loader.html  builder.html  context.html  define_loader.html  descriptor.html  document_loader.html  exceptions.html  index.html  loader.html  ns_registry.html  odm_element.html  odm_loader.html  oid_generator.html  oid_generator_config.html  oid_index.html  schema_manager.html  typed.html  valueset.html
_sources/: changelog.rst.txt  index.rst.txt  modules.rst.txt
data/: ae_test.json  ae_test.xml  simple_create.json  simple_create.xml  simple_create_from_string.xml
guides/: creating_documents.html  dataset_json.html  getting_started.html  interoperability.html  model_reference.html  permissive_loading.html  reading_documents.html  validation.html
odmlib/: __init__.py  __init__.pyi  arm_loader.py  builder.py  context.py  dataframe.py  define_loader.py  descriptor.py  document_loader.py  exceptions.py  loader.py  mode.py  mode.pyi  ns_registry.py  odm_element.py  odm_loader.py  odm_parser.py  oid_generator.py  oid_generator_config.py  oid_index.py  py.typed  schema_manager.py  typed.py  valueset.py
tests/: conftest.py  test_bottom_up.py  test_builder.py  test_clinicalData.py  test_collect_errors.py  test_context_managers.py  test_create_dataset.py  test_create_odm.py  test_ct_model.py  test_dataframe.py  test_dataframe_phase3.py  test_dataset_json.py  test_dataset_json_1_1_converter.py  test_dataset_json_1_1_model.py  test_dataset_json_converter.py  test_define21_parser_metadata.py  test_define21_validator.py  test_define_builder.py  test_define_flattener.py  test_define_parser_metadata.py  test_descriptor.py  (+30 more)
(+89 files in other folders)
